# zev

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
.github/: demo.cast  demo.mov
.github/workflows/: publish.yml
src/: llm.py  main.py  utils.py
src/zev/: llm.py  main.py  utils.py
