[project]
name = "zev"
version = "0.1.2"
description = "Lookup CLI commands easily"
readme = "README.md"
dependencies = [
    "openai==1.68.2",
    "platformdirs==4.3.7",
    "pyperclip==1.9.0",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    "questionary===2.1.0",
    "rich==13.9.4"
]
requires-python = ">=3.8"

[project.scripts]
zev = "zev.main:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["zev"]

[tool.ruff]
line-length = 120
